<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ca"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.androidapplication.entertainmentmedia.Controller.MovieDetailsActivity">

    <TextView
        android:id="@+id/movieWritersDetailsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/movie_writers_name"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieActorsDetailsTextView" />

    <TextView
        android:id="@+id/movieActorsDetailsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/movie_actors_name"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:id="@+id/movieBoxOfficeDetailsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/movie_box_office_name"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moviePlotDetailsTextView" />

    <TextView
        android:id="@+id/moviePlotDetailsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/movie_plot_name"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieWritersDetailsTextView" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <ImageView
                android:id="@+id/moviePosterDetailsImageVeiw"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@android:color/black"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="8dp" />

            <TextView
                android:id="@+id/movieTitleDetailsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/moviePosterDetailsImageVeiw"
                android:text="@string/movie_title_name"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movieYearDetailsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/movieTitleDetailsTextView"
                android:layout_below="@+id/movieTitleDetailsTextView"
                android:text="@string/movie_year_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movieTypeDetailsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/movieYearDetailsTextView"
                android:layout_below="@+id/movieYearDetailsTextView"
                android:text="@string/movie_type_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movieRatingDetailsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/movieTypeDetailsTextView"
                android:layout_below="@+id/movieTypeDetailsTextView"
                android:text="@string/movie_rating_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/moviedirectorDetailsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/movieRunTimeDetailsTextView"
                android:text="@string/movie_director_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movieRunTimeDetailsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/movieRatingDetailsTextView"
                android:layout_below="@+id/movieRatingDetailsTextView"
                android:text="@string/movie_runtime_name"
                android:textStyle="bold" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
