<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/search_text_name"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/searchEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/titleText"
                android:ems="10"
                android:hint="@string/search_hint_name"
                android:inputType="textPersonName"
                android:textStyle="italic" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/searchEdit"
                android:layout_centerHorizontal="true"
                android:background="@color/colorPrimaryDark"
                android:text="@string/submit_text_name"
                android:textColor="@color/colorLight"
                android:textStyle="bold" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>