<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <ImageView
                android:id="@+id/moviePosterImageView"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@android:color/background_dark" />

            <TextView
                android:id="@+id/movieTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="13dp"
                android:layout_toEndOf="@+id/moviePosterImageView"
                android:padding="5dp"
                android:text="@string/movie_title_name"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movieYearTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/movieTitleTextView"
                android:layout_below="@+id/movieTitleTextView"
                android:padding="5dp"
                android:text="@string/movie_year_name"
                android:textAlignment="viewStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movieGenreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/movieYearTextView"
                android:layout_below="@+id/movieYearTextView"
                android:padding="5dp"
                android:text="@string/movie_genre"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>